# durable-c

./: CMakeLists.txt  lab2-1  temp.c  useful.c  useful.h
Files/: export.txt  file.c  file1.c  file2.c  temp.c
HW/: a.out  hwp1.c  hwp2.c  input.txt
Trash/: BST.c  BinaryFwithMatrix.c  a.out  a.txt  homework1_lma (2).c  homework1_lma.c  os1.c  os2.c  os3.c  progintro.c  temp_text.txt  temporar.c
lab/: .~lock.data-1.ods#  a.txt  data-1.ods  data.csv  data2.csv  data3.csv  data4.csv  lab1.c  lab2-1.c  lab2-2.c  lab3-1.c  lab3-2.c  lab4-1.c  lab4-2.c  lab5-1.c  lab5-2.c  lab6-1.c  lab7-BST.c  lab7.c  temp.py
practice/: p2-structures.c  p2.txt  p3.c  p4-v2.c  p4.c  p5.c  p5.txt
